# sologger

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile-logstash  Dockerfile-otel  README.md  docker-compose.yaml
.github/workflows/: rust.yml
config/: README.md
config/demo/: sologger-config.json
config/file-example/: log4rs-config.yml  sologger-config.json
config/local/: log4rs-config.yml  sologger-config.json
config/logstash-example/: log4rs-config.yml  sologger-config.json
config/otel-example/: opentelemetry-config.json  sologger-config.json
docker-examples/: README.md
docker-examples/docker-elk/: README.md  docker-compose.yml  log4rs-config.yml
docker-examples/docker-elk/kibana/config/: kibana.yml
docker-examples/docker-elk/logstash/pipeline/: logstash.conf
docker-examples/docker-opensearch/: README.md  docker-compose.yaml  log4rs-config.yml  logstash.conf  sologger-config.json
docker-examples/docker-parseable/: README.md  docker-compose.yaml  log4rs-config.yml  logstash.conf
docker-examples/docker-signoz/: README.md
docker-examples/docker-signoz/docker-swarm/clickhouse-setup/: docker-compose.yaml  opentelemetry-config.json  sologger-config.json
docker-examples/docker-signoz/docker/clickhouse-setup/: docker-compose.yaml  opentelemetry-config.json  otel-collector-metrics-config.yaml  sologger-config.json
docs/: error.html  index.html
docs/assets/: main-CFx2iZbe.css  main-DECZbvaO.js  main-DI6a0Upi.js  main-DWkrrRXN.css  main-DhbE6e9P.css  main-Dwp-RdsR.js
docs/sologger-log-transformer-wasm/pkg/: package.json  sologger_log_transformer_wasm.js  sologger_log_transformer_wasm_bg.js  sologger_log_transformer_wasm_bg.wasm  sologger_log_transformer_wasm_bg.wasm.d.ts
solana-log-context/: Cargo.toml  LogContext-schema.json  README.md
solana-log-context/src/: lib.rs  programs_selector.rs  rpc_response.rs  solana_log_context.rs
solana-log-transformer/: Cargo.toml  README.md
solana-log-transformer/src/: lib.rs  log_context_transformer.rs
solana-log-transport/: Cargo.toml  README.md
solana-log-transport/src/: lib.rs  opentelemetry_lib.rs
solana-log-transport/tests/: logstash_lib_tests.rs  opentelemetry_lib_tests.rs
solana-log-transport/tests/configs/: opentelemetry-config.json
sologger/: .gitignore  Cargo.toml  README.md  sologger-config-schema.json
sologger-log-context/: .gitignore  Cargo.toml  README.md
sologger-log-context/benches/: log_context_benchmarks.rs
sologger-log-context/pkg/: package.json  sologger_log_context.d.ts  sologger_log_context.js  sologger_log_context_bg.js  sologger_log_context_bg.wasm  sologger_log_context_bg.wasm.d.ts
sologger-log-context/src/: lib.rs  sologger_log_context.rs
sologger-log-context/wasm-examples/: basic.mjs
sologger-log-transformer/: Cargo.toml  README.md
sologger-log-transformer-wasm/: Cargo.toml  README.md
sologger-log-transformer-wasm/src/: lib.rs  log_context_transformer_wasm.rs
sologger-log-transformer-wasm/wasm-examples/: basic.mjs
sologger-log-transformer/benches/: log_context_transformer_benchmarks.rs
sologger-log-transformer/src/: lib.rs  log_context_transformer.rs
sologger-log-transport/: Cargo.toml  README.md
sologger-log-transport/src/: lib.rs  logstash_lib.rs  opentelemetry_config.rs  opentelemetry_lib.rs
sologger-log-transport/tests/: logstash_lib_tests.rs  opentelemetry_lib_tests.rs
sologger-ui/: error.html  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
sologger-ui/public/sologger-log-transformer-wasm/pkg/: sologger_log_transformer_wasm.d.ts
sologger-ui/src/: App.vue  main.js  style.css
sologger-ui/src/components/: LogsTable.vue  ProgramIdForm.vue  ProgramList.vue  StatsGrid.vue
sologger-ui/src/composables/: useTheme.js
sologger-ui/src/router/: index.js
sologger-ui/src/views/: AboutView.vue  ConvertView.vue  HomeView.vue
sologger/src/: lib.rs  log_processor.rs  logger_lib.rs  main.rs  solana_client_subscriber.rs  sologger_config.rs
sologger/tests/: logger_lib_test.rs
sologger/tests/config/: log4rs-config.yml
wasm-example/parseable-winston-example/: README.md  app.js  docker-compose.yaml  package-lock.json  package.json
wasm-example/parseable-winston-example/docker/: .gitignore  docker-compose.yaml  logstash.conf
