[package]
name = "sologger_log_transformer_wasm"
version = "0.2.0"
edition = "2021"
authors = ["Will Kennedy"]
description = "Provides utility to extract logs from various Solana API structs, such as blocks, transactions and responses."
license = "Apache-2.0"
repository = "https://github.com/brytelands/sologger"
readme = "README.md"
keywords = ["solana", "logging", "json", "parsing"]
categories = ["development-tools::debugging"]
exclude=["/tests", "/examples", "/benches", "/docs", "/target", "/.github", "/.gitignore", "/.gitattributes", "/.gitmodules", "/.travis.yml", "/.cargo-ok", "/.git", "/.idea"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
anyhow = "1.0.89"
sologger_log_context = "0.2.0"
serde = {version = "1.0.210", features = ["derive"]}
serde_derive = "1.0.210"
thiserror = "1.0.64"
semver = "1.0.23"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.95"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "1.0"