[package]
name = "sologger_log_transformer_wasm"
version = "0.2.1"
edition = "2021"
authors = ["Will Kennedy"]
description = "This library provides utility to extract and structure logs from Solana API logSubscribe responses and provides WASM support."
license = "Apache-2.0"
repository = "https://github.com/brytelands/sologger"
readme = "README.md"
keywords = ["solana", "logging", "json", "parsing"]
categories = ["development-tools::debugging"]
exclude=["/tests", "/examples", "/benches", "/docs", "/target", "/.github", "/.gitignore", "/.gitattributes", "/.gitmodules", "/.travis.yml", "/.cargo-ok", "/.git", "/.idea"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
anyhow = "1.0.96"
sologger_log_context = "0.2.2"
serde = {version = "1.0.218", features = ["derive"]}
thiserror = "1.0.69"
semver = "1.0.23"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.100"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "1.0"