[package]
name = "sologger_log_transformer"
version = "0.2.1"
edition = "2021"
authors = ["Will Kennedy"]
description = "Provides utility to extract logs from various Solana API structs, such as blocks, transactions and responses."
license = "Apache-2.0"
repository = "https://github.com/brytelands/sologger"
readme = "README.md"
keywords = ["solana", "logging", "json", "parsing"]
categories = ["development-tools::debugging"]
exclude=["/tests", "/examples", "/benches", "/docs", "/target", "/.github", "/.gitignore", "/.gitattributes", "/.gitmodules", "/.travis.yml", "/.cargo-ok", "/.git", "/.idea"]

[lib]
doctest = false

[dependencies]
anyhow = "1.0.89"
solana-rpc-client = "2.0.13"
solana-rpc-client-api = "2.0.13"
solana-transaction-status = "2.0.13"
solana-sdk = "2.0.13"
sologger_log_context = "0.2.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "log_context_transformer_benchmarks"
harness = false